Updated the errors file to show more detail. Corrected the path in local directory listings to accommodate the type checkers inability to cope with "//" in a path.